--- a/app/views/recall/vulnerable-situations.html
+++ b/app/views/recall/vulnerable-situations.html
@@ -13,7 +13,7 @@
             name: "vulnerable-situations",
             fieldset: {
                 legend: {
-                text: "Is the offender in a situation that makes them vulnerable?",
+                text: "Is Kate Kim in a situation that makes them vulnerable?",
                 isPageHeading: true,
                 classes: "govuk-fieldset__legend--l"
                 }
