--- a/app/views/recall/vulnerable-situations.html
+++ b/app/views/recall/vulnerable-situations.html
@@ -5,6 +5,10 @@
 
 {% block content %}
 <div class="govuk-grid-row">
+    <div class="govuk-grid-column-one-third">
+        {% set currentPage = "vulnerable-situations" %}
+        {% include "recall/_side-navigation.html" %}
+    </div>
     <div class="govuk-grid-column-two-thirds">
         <form action="/recall/location">
 
