Change name from Kate to Jack

--- a/app/views/recall/vulnerable-situations.html
+++ b/app/views/recall/vulnerable-situations.html
@@ -17,7 +17,7 @@
             name: "vulnerable-situations",
             fieldset: {
                 legend: {
-                text: "Is Kate Kim in a situation that makes them vulnerable?",
+                text: "Is Jack Johnson in a situation that makes them vulnerable?",
                 isPageHeading: true,
                 classes: "govuk-fieldset__legend--l"
                 }
