changes to page order and content changes
brought finding an offender forward, followed by asking sentence type and the threat level to the public, so that we can determine the emergency level ourselves.

added description fields for vulnerability and breach types

--- a/app/views/recall/_side-navigation.html
+++ b/app/views/recall/_side-navigation.html
@@ -9,23 +9,26 @@
             text: 'Request a recall'
         },
         items: [{
-            text: 'Is it an emergency?',
-            href: '/recall/emergency',
-            active: currentPage == 'emergency'
+          text: 'Find an offender',
+          href: '/recall/search',
+          active: currentPage == 'search'
+
         }, {
-            text: 'Find an offender',
-            href: '/recall/search',
-            active: currentPage == 'search'
+          text: 'Which active sentence',
+          href: '/recall/sentence-breached',
+          active: currentPage == 'sentence-breached'
+
         }, {
-            text: 'What is the breach of licence for?',
-            href: '/recall/sentence-breached',
-            active: currentPage == 'sentence-breached'
+          text: 'Call PPCS for emergencies',
+          href: '/recall/emergency',
+          active: currentPage == 'emergency'
+
         }, {
             text: 'How has the licence been breached?',
             href: '/recall/breach-reason',
             active: currentPage == 'breach-reason'
         }, {
-            text: 'Is the offender in a situation that makes them vulnerable?',
+            text: 'Vulnerability concerns',
             href: '/recall/vulnerable-situations',
             active: currentPage == 'vulnerable-situations'
         }, {
