--- a/app/views/recall/location.html
+++ b/app/views/recall/location.html
@@ -62,6 +62,19 @@
                     }
                 },
                 {
+                    value: "Last registered address",
+                    text: "Last registered address",
+                    conditional: {
+                        html: govukInput({
+                            id: "other-location",
+                            name: "other-location",
+                            label: {
+                                text: "Describe it here"
+                            }
+                        })
+                    }
+                },
+                {
                     value: "Not sure",
                     text: "Not sure",
                     conditional: {
